<resources>
    <string name="app_name">LocatorApp</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <string name="start_locator_description">Start the locator app for experiment</string>
    <string name="start_locator_label">Start Locator</string>

    <string name="start_locator_button">start</string>
    <string name="cancel">cancel</string>
    <string name="my_ID">A</string>
    <string name="choose_A">A</string>
    <string name="choose_D">D</string>
    <string name="choose_G">G</string>
    <string name="choose_J">J</string>
    <string name="choose_B">B</string>
    <string name="choose_E">E</string>
    <string name="choose_H">H</string>
    <string name="choose_K">K</string>
    <string name="choose_C">C</string>
    <string name="choose_F">F</string>
    <string name="choose_I">I</string>
    <string name="choose_L">L</string>
    <!--<string name="title_activity_settings">Settings</string>-->
    <string name="setting_label">Settings</string>
    <string name="setting_description">setting for the uploading server address</string>
    <string name="enter_server_address">Please enter your uploading server address</string>
    <string name="Upload">Upload</string>
    <string name="Detele_Local_Data">Delete Local Data</string>
    <string name="server_address">server address</string>

    <!-- Strings related to Settings -->


</resources>
